k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-portfolio
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-portfolio
  template:
    metadata:
      labels:
        app: my-portfolio
    spec:
      containers:
      - name: my-portfolio
        image: sharath2003/my-portfolio:5
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
