k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-portfolio-svc
  namespace: default
spec:
  selector:
    app: my-portfolio
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
